<resources>
    <string name="zero">0</string>
    <string name="app_name">CREDIT CARD MANAGER</string>
    <string name="inter">9934548976934084_934589323596716</string>
    <string name="home_page_banner">9934548976934084_934592326929749</string>
    <string name="home_page_native_banner">9934548976934084_1168452870210359</string>
    <string name="home_page_native">9934548976934084_934593226929659</string>
    <string name="card_details_banner">9934548976934084_1123827858006194</string>
    <string name="add_expense_banner">9934548976934084_1161102507612062</string>
    <string name="edit_card_banner">9934548976934084_1161102850945361</string>

    <!--<string name="inter">VID_HD_9_16_39S_LINK#934548976934084_934589323596716</string>-->

    <string name="edit_card_title_string">EDIT CARD</string>
    <string name="add_expense_title_string">ADD TRANSACTION</string>
    <string name="add_card_title_string">ADD CARD</string>
    <string name="select_card_string">Select Your Card</string>
    <string name="select_name_string">Enter Your Expense Name</string>
    <string name="select_price_string">Enter Your Expense Money</string>
    <string name="select_date_string">Select Your Expense Date</string>
    <string name="select_type_hint_string">Select Transaction Type</string>
    <string name="select_debit_string">EXPENSE FROM CARD</string>
    <string name="select_credit_string">PAID TO CARD</string>
    <string name="select_save_string">ADD TRANSACTION</string>
    <string name="expense_details_title_string">CARD TRANSACTION DETAILS</string>
    <string name="expense_debit_string">TOTAL EXPENSE FROM CARD</string>
    <string name="expense_credit_string">TOTAL PAID TO CARD</string>

    <string name="expense_edit_title_string">EDIT YOUR TRANSACTION</string>
    <string name="available_title_string">Available Balance: </string>


    <string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>
