<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Card_Details">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/banner_details_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:cardMaxElevation="5dp"
            app:contentPadding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.cooltechworks.creditcarddesign.CreditCardView
                    android:id="@+id/expense_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:card_expiration="01/26"
                    app:card_holder_name="Muhaiminur Rahman"
                    app:card_number="38056789000000000"
                    app:cvv="522" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/expense_credit_string"
                            android:textAlignment="center"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/expense_credit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/zero"
                            android:textAlignment="center"
                            android:textColor="@color/app_dark"
                            android:textSize="22sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/expense_debit_string"
                            android:textAlignment="center"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/expense_debit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/zero"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="22sp" />
                    </LinearLayout>
                </LinearLayout>

                <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/expense_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textAlignment="textStart"
                    app:ms_arrowColor="@color/colorPrimaryDark"
                    app:ms_baseColor="@color/colorPrimaryDark"
                    app:ms_enableErrorLabel="true"
                    app:ms_enableFloatingLabel="true"
                    app:ms_floatingLabelColor="@color/app_hint"
                    app:ms_floatingLabelText="@string/select_date_string"
                    app:ms_hint="@string/select_date_string"
                    app:ms_hintColor="@color/app_hint"
                    app:ms_hintTextSize="12sp"
                    app:ms_multiline="false" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/details_recycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>

</ScrollView>